Made rows respond to tocuhes using Segues

--- a/ch28-UIStoryboard/Colorboard/Colorboard/Colorboard.storyboard
+++ b/ch28-UIStoryboard/Colorboard/Colorboard/Colorboard.storyboard
@@ -20,6 +20,24 @@
             </objects>
             <point key="canvasLocation" x="-51" y="554"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="gsT-Ap-jCo">
+            <objects>
+                <viewController id="V0o-nd-MNh" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="zKP-iN-ZxY"/>
+                        <viewControllerLayoutGuide type="bottom" id="3Il-d6-fCU"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Ycm-Rd-BxY">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3oB-fG-Opo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1482" y="182"/>
+        </scene>
         <!--Colors-->
         <scene sceneID="ph9-5k-KRj">
             <objects>
@@ -44,6 +62,9 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="V0o-nd-MNh" kind="show" id="Vwm-iJ-7Ij"/>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="UITableViewCell" textLabel="d2H-g6-vXY" style="IBUITableViewCellStyleDefault" id="Hqf-qC-app">
                                         <autoresizingMask key="autoresizingMask"/>
@@ -58,6 +79,9 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="SVc-Ia-ltN" kind="show" id="fmt-Ww-tmN"/>
+                                        </connections>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -72,6 +96,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FXs-iA-9YX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="758" y="554"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="rNx-jg-hOi">
+            <objects>
+                <viewController id="SVc-Ia-ltN" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="gBd-nz-VCj"/>
+                        <viewControllerLayoutGuide type="bottom" id="WBK-vk-lbY"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="HPF-GS-kg2">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ptz-xg-A4m" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1482" y="902"/>
         </scene>
     </scenes>
 </document>
